@@ -659,7 +659,7 @@ public final class InjectionUtils {
                                                                                          paramType,
                                                                                          paramAnns);
             }
-            bean = paramType.newInstance();
+            bean = paramType.getDeclaredConstructor().newInstance();
         } catch (IllegalAccessException ex) {
             reportServerError("CLASS_ACCESS_FAILURE", paramType.getName());
         } catch (Exception ex) {
@@ -982,7 +982,7 @@ public final class InjectionUtils {
         Object theValues = null;
         if (type != null) {
             try {
-                theValues = type.newInstance();
+                theValues = type.getDeclaredConstructor().newInstance();
             } catch (IllegalAccessException ex) {
                 reportServerError("CLASS_ACCESS_FAILURE", type.getName());
             } catch (Exception ex) {
@@ -1169,7 +1169,7 @@ public final class InjectionUtils {
         if (proxyClassName != null) {
             try {
                 return (ThreadLocalProxy<?>)ClassLoaderUtils.loadClass(proxyClassName, InjectionUtils.class)
-                    .newInstance();
+                    .getDeclaredConstructor().newInstance();
             } catch (Throwable t) {
                 throw new RuntimeException(t);
             }
